--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 html {
   text-align: center;
+  background-color: rgb(75, 70, 70);
 }
 
 table {
@@ -9,18 +10,24 @@ table {
   max-width: 800px;
   margin: 0 auto;
   box-sizing: border-box;
+  background-color: lightgray;
 }
 table td {
   border: 1px solid black;
   padding: 5px 15px;
+}
+.header{
+  color: lightgray;
 }
 #sortBtns{
     display: flex;
     justify-content: space-around;
     margin: 0 auto;
     width: 30%;
-    margin-bottom: 1rem;
-    
+    margin-bottom: 1rem;  
+}
+.sortBtn{
+  width: 100px;
 }
 td.contentCell {
   display: flex;
@@ -37,6 +44,8 @@ td.contentCell {
 
 .deleteBtn {
   margin-left: auto;
+  width: 50px;
+  color: rgb(128, 6, 6);
 }
 
 .contentRow,
@@ -49,9 +58,15 @@ td.contentCell {
 }
 
 input#taskInput {
+  width: 200px;
   margin: 1rem 0;
+  border-radius: 1rem;
+  padding: 0.5rem;
 }
-
+::placeholder{
+  text-align: center;
+  font-size: 1rem;
+}
 div.header {
   font-size: 2rem;
   font-weight: bold;
@@ -75,7 +90,8 @@ th {
 }
 input[type="button"] {
     cursor: pointer;
-    width: 100px;
+    /* width: 50px; */
     height: 20px;
     text-align: center;
+    border-radius: 1rem;
 }
